--- a/about.html
+++ b/about.html
@@ -3,21 +3,32 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Avni Plastics - About Us</title>
+  <title>Avni Plastics - About</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
   <style>
-    body {
+    * {
       margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    html {
+      scroll-behavior: smooth;
+    }
+    body {
       font-family: 'Poppins', sans-serif;
-      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
-      color: #f5f5f5;
+      background: linear-gradient(to right, #2c3e50, #bdc3c7);
+      color: #1c1c1c;
+      line-height: 1.6;
+      min-height: 100vh;
+      padding-bottom: 100px;
     }
     header {
-      background-color: rgba(255, 255, 255, 0.1);
+      background-color: rgba(255, 255, 255, 0.9);
       padding: 1rem 2rem;
       text-align: center;
       font-size: 2rem;
       font-weight: 600;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.3);
     }
     main {
       padding: 2rem;
@@ -25,26 +36,39 @@
     footer {
       text-align: center;
       padding: 1rem;
-      background-color: rgba(255, 255, 255, 0.1);
+      background-color: rgba(255, 255, 255, 0.9);
+      margin-top: 2rem;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
     }
     .product-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 1rem;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 1.5rem;
+      margin-top: 1rem;
     }
     .product {
-      background: rgba(255,255,255,0.1);
+      background: rgba(255,255,255,0.8);
       padding: 1rem;
       border-radius: 10px;
       text-align: center;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    .product:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.4);
     }
     img {
       max-width: 100%;
       border-radius: 10px;
+      height: 180px;
+      object-fit: cover;
     }
     .whatsapp {
       position: fixed;
-      bottom: 20px;
+      bottom: 80px;
       right: 20px;
       background: #25D366;
       padding: 15px;
@@ -58,8 +82,8 @@
   </style>
 </head>
 <body>
-  <header>Avni Plastics - About Us</header>
-  <main><p>Avni Plastics is a leading manufacturer of plastic bottles, dedicated to quality and bulk supply excellence.</p></main>
+  <header>Avni Plastics - About</header>
+  <main><h2>About Us</h2><p>Avni Plastics is a premium plastic bottle manufacturing company with a mission to deliver quality and sustainability.</p></main>
   <footer>Contact: 9993041244 | Email: saxenaaryan305@gmail.com</footer>
   <a href="https://wa.me/919993041244" class="whatsapp" target="_blank">
     <img src="https://cdn-icons-png.flaticon.com/512/124/124034.png" alt="WhatsApp" />
