--- a/index.html
+++ b/index.html
@@ -1,259 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Avni Plastics - Premium Plastic Packaging Manufacturer</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Avni Plastics - Home</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    html {
+      scroll-behavior: smooth;
+    }
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(to right, #2c3e50, #bdc3c7);
+      color: #1c1c1c;
+      line-height: 1.6;
+      min-height: 100vh;
+      padding-bottom: 100px;
+    }
+    header {
+      background-color: rgba(255, 255, 255, 0.9);
+      padding: 1rem 2rem;
+      text-align: center;
+      font-size: 2rem;
+      font-weight: 600;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+    }
+    main {
+      padding: 2rem;
+    }
+    footer {
+      text-align: center;
+      padding: 1rem;
+      background-color: rgba(255, 255, 255, 0.9);
+      margin-top: 2rem;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+    }
+    .product-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 1.5rem;
+      margin-top: 1rem;
+    }
+    .product {
+      background: rgba(255,255,255,0.8);
+      padding: 1rem;
+      border-radius: 10px;
+      text-align: center;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    .product:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.4);
+    }
+    img {
+      max-width: 100%;
+      border-radius: 10px;
+      height: 180px;
+      object-fit: cover;
+    }
+    .whatsapp {
+      position: fixed;
+      bottom: 80px;
+      right: 20px;
+      background: #25D366;
+      padding: 15px;
+      border-radius: 50%;
+      z-index: 1000;
+    }
+    .whatsapp img {
+      width: 30px;
+      height: 30px;
+    }
+  </style>
 </head>
 <body>
-    <!-- Top Notification Bar -->
-    <div class="top-bar">
-        <div class="container">
-            <p><i class="fas fa-phone"></i> +91 9876543210 | <i class="fas fa-envelope"></i> sales@avniplastics.com</p>
-            <div class="top-links">
-                <a href="#"><i class="fas fa-user"></i> Account</a>
-                <a href="#"><i class="fas fa-heart"></i> Wishlist</a>
-                <a href="contact.html"><i class="fas fa-headset"></i> Support</a>
-            </div>
-        </div>
-    </div>
-
-    <!-- Main Header -->
-    <header class="main-header">
-        <div class="container">
-            <div class="logo-search">
-                <div class="logo">
-                    <img src="images/logo.png" alt="Avni Plastics">
-                </div>
-                <div class="search-box">
-                    <input type="text" placeholder="Search products...">
-                    <button><i class="fas fa-search"></i></button>
-                </div>
-                <div class="header-actions">
-                    <a href="#" class="cart-icon">
-                        <i class="fas fa-shopping-cart"></i>
-                        <span class="cart-count">0</span>
-                    </a>
-                    <a href="contact.html" class="quote-btn">Get Quote</a>
-                </div>
-            </div>
-        </div>
-    </header>
-
-    <!-- Main Navigation -->
-    <nav class="main-nav">
-        <div class="container">
-            <ul class="nav-menu">
-                <li><a href="index.html" class="active"><i class="fas fa-home"></i> Home</a></li>
-                <li class="mega-menu">
-                    <a href="products.html"><i class="fas fa-box-open"></i> Products <i class="fas fa-chevron-down"></i></a>
-                    <div class="mega-content">
-                        <div class="mega-column">
-                            <h4>By Material</h4>
-                            <ul>
-                                <li><a href="products.html#pet">PET Bottles</a></li>
-                                <li><a href="products.html#hdpe">HDPE Containers</a></li>
-                                <li><a href="products.html#pp">PP Packaging</a></li>
-                                <li><a href="products.html#ldpe">LDPE Bags</a></li>
-                            </ul>
-                        </div>
-                        <div class="mega-column">
-                            <h4>By Industry</h4>
-                            <ul>
-                                <li><a href="products.html#beverage">Beverage</a></li>
-                                <li><a href="products.html#pharma">Pharmaceutical</a></li>
-                                <li><a href="products.html#cosmetic">Cosmetic</a></li>
-                                <li><a href="products.html#food">Food</a></li>
-                            </ul>
-                        </div>
-                        <div class="mega-column">
-                            <h4>Featured Products</h4>
-                            <div class="mega-products">
-                                <div class="mega-product">
-                                    <img src="images/products/pet-bottle-500ml.jpg" alt="PET Bottle">
-                                    <a href="products.html#pet">PET Bottles</a>
-                                </div>
-                                <div class="mega-product">
-                                    <img src="images/products/cosmetic-jar.jpg" alt="Cosmetic Jar">
-                                    <a href="products.html#cosmetic">Cosmetic Jars</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-                <li><a href="about.html"><i class="fas fa-building"></i> About Us</a></li>
-                <li><a href="contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
-                <li><a href="#"><i class="fas fa-blog"></i> Blog</a></li>
-                <li><a href="#"><i class="fas fa-certificate"></i> Certifications</a></li>
-            </ul>
-        </div>
-    </nav>
-
-    <!-- Hero Slider -->
-    <section class="hero-slider">
-        <div class="hero-slides">
-            <div class="slide active" style="background-image: url('images/showcase/showcase1.jpg')">
-                <div class="slide-content">
-                    <h1>Premium Plastic Packaging Solutions</h1>
-                    <p>Manufactured with German precision technology for unmatched quality</p>
-                    <a href="products.html" class="btn btn-primary">Explore Products</a>
-                </div>
-            </div>
-            <div class="slide" style="background-image: url('images/showcase/showcase2.jpg')">
-                <div class="slide-content">
-                    <h1>Custom Packaging Designs</h1>
-                    <p>Tailored solutions for your specific product requirements</p>
-                    <a href="contact.html" class="btn btn-primary">Request Design</a>
-                </div>
-            </div>
-            <div class="slide" style="background-image: url('images/showcase/showcase3.jpg')">
-                <div class="slide-content">
-                    <h1>Bulk Order Discounts</h1>
-                    <p>Special pricing for large quantity orders with quick turnaround</p>
-                    <a href="contact.html" class="btn btn-primary">Get Quote</a>
-                </div>
-            </div>
-        </div>
-        <div class="slider-controls">
-            <button class="prev-slide"><i class="fas fa-chevron-left"></i></button>
-            <button class="next-slide"><i class="fas fa-chevron-right"></i></button>
-        </div>
-        <div class="slider-dots"></div>
-    </section>
-
-    <!-- Categories Section -->
-    <section class="categories">
-        <div class="container">
-            <h2 class="section-title">Shop By Category</h2>
-            <div class="category-grid">
-                <a href="products.html#beverage" class="category-card">
-                    <img src="images/industries/beverage.jpg" alt="Beverage Bottles">
-                    <h3>Beverage Bottles</h3>
-                </a>
-                <a href="products.html#pharma" class="category-card">
-                    <img src="images/industries/pharma.jpg" alt="Pharmaceutical">
-                    <h3>Pharmaceutical</h3>
-                </a>
-                <a href="products.html#cosmetic" class="category-card">
-                    <img src="images/industries/cosmetic.jpg" alt="Cosmetic Packaging">
-                    <h3>Cosmetic Packaging</h3>
-                </a>
-                <a href="products.html#food" class="category-card">
-                    <img src="images/industries/food.jpg" alt="Food Containers">
-                    <h3>Food Containers</h3>
-                </a>
-            </div>
-        </div>
-    </section>
-
-    <!-- Featured Products -->
-    <section class="featured-products">
-        <div class="container">
-            <div class="section-header">
-                <h2 class="section-title">Featured Products</h2>
-                <a href="products.html" class="view-all">View All <i class="fas fa-arrow-right"></i></a>
-            </div>
-            <div class="product-grid">
-                <div class="product-card">
-                    <div class="product-badge">Best Seller</div>
-                    <div class="product-image">
-                        <img src="images/products/pet-bottle-500ml.jpg" alt="PET Bottle 500ml">
-                        <div class="product-actions">
-                            <button class="quick-view"><i class="fas fa-eye"></i></button>
-                            <button class="add-wishlist"><i class="far fa-heart"></i></button>
-                            <button class="add-cart"><i class="fas fa-shopping-cart"></i> Add to Cart</button>
-                        </div>
-                    </div>
-                    <div class="product-details">
-                        <h3>PET Bottle 500ml</h3>
-                        <div class="product-specs">
-                            <span><i class="fas fa-box"></i> 28mm Neck</span>
-                            <span><i class="fas fa-weight-hanging"></i> 24g</span>
-                        </div>
-                        <div class="product-price">
-                            <span class="price">₹8.50</span>
-                            <span class="moq">MOQ: 1000 pcs</span>
-                        </div>
-                        <a href="products.html#pet" class="btn btn-outline">View Details</a>
-                    </div>
-                </div>
-                
-                <!-- More product cards... (7 more) -->
-            </div>
-        </div>
-    </section>
-
-    <!-- WhatsApp Float -->
-    <a href="https://wa.me/919876543210" class="whatsapp-float">
-        <i class="fab fa-whatsapp"></i>
-    </a>
-
-    <!-- Footer -->
-    <footer class="main-footer">
-        <div class="footer-top">
-            <div class="container">
-                <div class="footer-grid">
-                    <div class="footer-col">
-                        <img src="images/logo-white.png" alt="Avni Plastics" class="footer-logo">
-                        <p>Leading manufacturer of high-quality plastic packaging solutions since 2010.</p>
-                        <div class="social-links">
-                            <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a href="#"><i class="fab fa-twitter"></i></a>
-                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                            <a href="#"><i class="fab fa-instagram"></i></a>
-                            <a href="#"><i class="fab fa-youtube"></i></a>
-                        </div>
-                    </div>
-                    <div class="footer-col">
-                        <h3>Quick Links</h3>
-                        <ul>
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="products.html">Products</a></li>
-                            <li><a href="about.html">About Us</a></li>
-                            <li><a href="contact.html">Contact</a></li>
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">Testimonials</a></li>
-                        </ul>
-                    </div>
-                    <div class="footer-col">
-                        <h3>Products</h3>
-                        <ul>
-                            <li><a href="products.html#pet">PET Bottles</a></li>
-                            <li><a href="products.html#hdpe">HDPE Containers</a></li>
-                            <li><a href="products.html#pp">PP Packaging</a></li>
-                            <li><a href="products.html#cosmetic">Cosmetic Jars</a></li>
-                            <li><a href="products.html#food">Food Containers</a></li>
-                            <li><a href="products.html#pharma">Pharma Bottles</a></li>
-                        </ul>
-                    </div>
-                    <div class="footer-col">
-                        <h3>Contact Us</h3>
-                        <ul class="contact-info">
-                            <li><i class="fas fa-map-marker-alt"></i> 123 Industrial Area, MIDC, Mumbai - 400093</li>
-                            <li><i class="fas fa-phone"></i> +91 9876543210</li>
-                            <li><i class="fas fa-envelope"></i> sales@avniplastics.com</li>
-                            <li><i class="fas fa-clock"></i> Mon-Sat: 9:00 AM - 6:00 PM</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="footer-bottom">
-            <div class="container">
-                <p>&copy; 2023 Avni Plastics. All Rights Reserved.</p>
-                <div class="payment-methods">
-                    <img src="https://via.placeholder.com/40x25" alt="Visa">
-                    <img src="https://via.placeholder.com/40x25" alt="Mastercard">
-                    <img src="https://via.placeholder.com/40x25" alt="UPI">
-                    <img src="https://via.placeholder.com/40x25" alt="Net Banking">
-                </div>
-            </div>
-        </div>
-    </footer>
-
-    <script src="js/script.js"></script>
+  <header>Avni Plastics - Home</header>
+  <main><h2>Welcome to Avni Plastics</h2><p>We manufacture high-quality plastic bottles in bulk.</p></main>
+  <footer>Contact: 9993041244 | Email: saxenaaryan305@gmail.com</footer>
+  <a href="https://wa.me/919993041244" class="whatsapp" target="_blank">
+    <img src="https://cdn-icons-png.flaticon.com/512/124/124034.png" alt="WhatsApp" />
+  </a>
 </body>
-                                </html>
+</html>
